fix: change team tab hover color to be legible in light mode

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -2875,7 +2875,7 @@ textarea[data-markdown] {
   transition: all 0.3s;
 
   &:hover {
-    color: var(--pico-color);
+    color: var(--pico-contrast);
   }
 
   &.active {
